--- a/docs/AI Cybersecurity Engineer.mdx
+++ b/docs/AI Cybersecurity Engineer.mdx
@@ -86,6 +86,7 @@ You may stop at any level or complete the full ladder.
 ## Detailed Curriculum (Project-Oriented)
 
 ### Module 0 — AI Systems Security Foundations  
+
 **Certification:** C-AISSA  
 
 **Timeline:** Two to four weeks
@@ -104,6 +105,7 @@ Students deliver a full security baseline for a production AI system, including:
 ---
 
 ### Module 1 — Adversarial Machine Learning  
+
 **Certification:** C-AMLE  
 
 **Timeline:** Eight to ten weeks
@@ -118,6 +120,7 @@ Students implement multiple adversarial attacks, evaluate transferability, and b
 ---
 
 ### Module 2 — LLM and Autonomous Agent Security  
+
 **Certification:** C-LASS  
 
 **Timeline:** Eight to ten weeks
@@ -141,6 +144,7 @@ Students build a security layer for LLMs and autonomous agents, including:
 ---
 
 ### Module 3 — AI-Powered Cyber Defense  
+
 **Certification:** C-AICDE  
 
 **Timeline:** Ten to twelve weeks
@@ -162,6 +166,7 @@ Students build a real-time, machine-learning-driven defense system such as:
 ---
 
 ### Module 4 — Offensive AI and Red Teaming  
+
 **Certification:** C-AIRTO  
 
 **Timeline:** Ten to twelve weeks
@@ -180,7 +185,9 @@ Students simulate real adversaries targeting AI systems through:
 ---
 
 ### Module 5 — AI Governance, Risk, and Compliance  
+
 **Certification:** C-AIRGP  
+
 **Timeline:** Six to eight weeks
 
 **Enterprise Project:** AI Governance and Risk Engine
@@ -198,7 +205,9 @@ Students build a governance platform featuring:
 ---
 
 ### Module 6 — AI Security Architecture  
+
 **Certification:** C-AISA  
+
 **Timeline:** Six to eight weeks
 
 **Enterprise Projects:**
@@ -213,6 +222,7 @@ Students quantify risk in monetary terms and produce mathematically justified ro
 ---
 
 ### Module 7 — Principal Capstone  
+
 **Certification:** C-PAISE  
 
 **Timeline:** Four to six months
@@ -244,6 +254,202 @@ Every certification requires:
 5. Oral defense before StFrancis Labs reviewers  
 
 No multiple-choice exams. No shortcuts.
+
+---
+
+# 🧪 Hands-On Lab Exam Additions for All Certification Levels
+
+Here are the **practical, hands-on lab exam requirements** to add to each certification level in your AI Security Engineer Bootcamp:
+
+---
+
+## **Module 0 — C-AISSA (AI Systems Security Associate)**
+### **Lab Exam: Real-World Threat Modeling Challenge**
+- **Duration:** 4 hours
+- **Scenario:** Given a live e-commerce recommendation API
+- **Tasks:**
+  1. Map the complete AI attack surface
+  2. Identify 5+ critical vulnerabilities
+  3. Build a working proof-of-concept exploit for 2 vulnerabilities
+  4. Document remediation with actual code fixes
+- **Deliverables:**
+  - Live exploit demonstration
+  - Patched code repository
+  - Executive risk briefing (5-minute video)
+
+---
+
+## **Module 1 — C-AMLE (Adversarial ML Engineer)**
+### **Lab Exam: Black-Box Attack Tournament**
+- **Duration:** 48-hour capture-the-flag
+- **Scenario:** Attack 3 production-grade models without internal knowledge
+- **Tasks:**
+  1. Generate adversarial examples that fool all models
+  2. Achieve >90% attack success rate
+  3. Defend against other participants' attacks
+  4. Write a robustness report with quantifiable metrics
+- **Environment:** Isolated Kubernetes cluster with monitoring
+- **Passing:** Top 30% of tournament participants
+
+---
+
+## **Module 2 — C-LASS (LLM & Agent Security Specialist)**
+### **Lab Exam: Jailbreak & Containment Marathon**
+- **Duration:** 6 hours
+- **Scenario:** Secured LLM agent with financial tool access
+- **Tasks:**
+  1. Break out of sandbox using 5 different jailbreak techniques
+  2. Implement containment that survives all jailbreak attempts
+  3. Build real-time detection system (<100ms latency)
+  4. Demonstrate kill-switch that works mid-attack
+- **Metrics:**
+  - Zero successful jailbreaks in final 2 hours
+  - <5% false positive rate
+  - All attacks detected within 500ms
+
+---
+
+## **Module 3 — C-AICDE (AI Cyber Defense Engineer)**
+### **Lab Exam: Live Attack Defense**
+- **Duration:** 24-hour continuous defense
+- **Scenario:** Production network with AI-powered attacks
+- **Tasks:**
+  1. Deploy ML-based IDS from scratch
+  2. Detect and mitigate 100+ attack variants
+  3. Maintain >99% service availability
+  4. Produce forensic timeline of attacks
+- **Real Attacks Included:**
+  - Adversarial malware
+  - Data poisoning
+  - Model inversion
+  - Membership inference
+
+---
+
+## **Module 4 — C-AIRTO (AI Red Team Operator)**
+### **Lab Exam: Red Team Operation**
+- **Duration:** 72-hour simulated enterprise environment
+- **Scenario:** Financial institution with 5 AI systems
+- **Tasks:**
+  1. Gain initial access through AI system vulnerability
+  2. Extract sensitive training data
+  3. Poison model without detection
+  4. Plant backdoor for persistent access
+  5. Write professional engagement report
+- **Grading:**
+  - Stealth (detection avoidance)
+  - Impact (critical systems compromised)
+  - Documentation (court-admissible evidence)
+
+---
+
+## **Module 5 — C-AIRGP (AI Risk & Governance Professional)**
+### **Lab Exam: Compliance & Audit Simulation**
+- **Duration:** 8 hours
+- **Scenario:** Healthcare AI system facing regulatory audit
+- **Tasks:**
+  1. Conduct complete bias audit with real patient data
+  2. Generate GDPR/CCPA/HIPAA compliance reports
+  3. Build automated audit trail system
+  4. Present findings to "regulators" (role-played)
+  5. Implement corrections and verify compliance
+- **Deliverables:**
+  - Compliance dashboard
+  - Legal risk assessment
+  - Remediation verification
+
+---
+
+## **Module 6 — C-AISA (AI Security Architect)**
+### **Lab Exam: Secure System Design & Build**
+- **Duration:** 1 week
+- **Scenario:** Design autonomous vehicle security system
+- **Tasks:**
+  1. Create threat model with 50+ attack vectors
+  2. Design zero-trust architecture
+  3. Implement cryptographic verification layer
+  4. Build formal verification proofs for critical components
+  5. Perform cost-benefit analysis of security measures
+- **Final:** Present to "board" (defend architecture decisions)
+
+---
+
+## **Module 7 — C-PAISE (Principal AI Security Engineer)**
+### **Lab Exam: Full-System Capstone**
+- **Duration:** 2 weeks
+- **Scenario:** Build and defend complete AI security platform
+- **Requirements:**
+  1. Platform must protect 3+ different AI systems
+  2. Survive 7-day continuous red team attack
+  3. Maintain >99.9% availability
+  4. Pass third-party penetration test
+  5. Scale to 1M requests/second
+  6. Cost <$0.0001 per inference for security overhead
+- **Final Defense:** 2-hour oral exam with industry experts
+
+---
+
+## 🎯 Lab Exam Common Requirements
+
+### **For All Levels:**
+1. **Live Environment:** No simulations – real systems, real attacks
+2. **Time Pressure:** Realistic deadlines mirroring production incidents
+3. **Documentation:** Professional reports suitable for executives
+4. **Code Quality:** Production-ready, reviewed, and tested
+5. **Ethical Boundaries:** Clear rules of engagement, legal review
+
+### **Grading Rubric:**
+- **Technical Execution (40%)** – Did it work under pressure?
+- **Security Depth (30%)** – Understanding of root causes
+- **Communication (20%)** – Can explain to non-technical stakeholders
+- **Ethics (10%)** – Responsible disclosure and handling
+
+### **Failure Modes:**
+- **Critical:** Causing actual harm or data loss
+- **Major:** Missing major vulnerability class
+- **Minor:** Poor documentation or communication
+
+---
+
+## 🛠️ Lab Infrastructure Requirements
+
+```yaml
+# For each student:
+isolation_level: full_vm_or_container
+resources:
+  cpu: 8 cores
+  ram: 32GB
+  gpu: 1x A100 (for ML levels)
+  storage: 500GB SSD
+network:
+  isolated: true
+  attack_simulation: enabled
+  monitoring: full_packet_capture
+backup: hourly_snapshots
+```
+
+---
+
+## 📊 Certification Validity & Renewal
+
+- **Certification valid:** 2 years
+- **Renewal requires:** Passing current year's lab exam
+- **Failure:** Must retake full module
+- **Advanced standing:** Can challenge higher level labs directly
+
+---
+
+## 🔒 Security & Anti-Cheating Measures
+
+1. **Live proctoring** with screen/camera monitoring
+2. **Unique exam environments** per candidate
+3. **Behavioral analysis** for cheating detection
+4. **Post-exam code review** for originality
+5. **Oral defense** to verify understanding
+
+---
+
+**These hands-on lab exams ensure that every certified engineer has actually built, broken, and defended real AI systems — not just passed a written test.**
 
 ---
 
