--- a/docs/AI Cybersecurity Engineer.mdx
+++ b/docs/AI Cybersecurity Engineer.mdx
@@ -1,3 +1,4 @@
+markdown
 ---
 slug: ai-security-engineer-bootcamp-and-certification-stfrancis-labs
 title: "AI Security Engineer Bootcamp & Certification Ladder"
@@ -31,6 +32,7 @@ import Newsletter from "@site/src/components/Newsletter";
 AI systems now make autonomous decisions in production environments. They approve loans, diagnose diseases, control infrastructure, and interact with millions of users every day. When these systems fail, the consequences are not theoretical — they are financial, legal, and reputational.
 
 Yet many AI engineers graduate without understanding:
+
 - How adversaries manipulate model predictions
 - Why prompt injection defeats LLM guardrails
 - How robustness can be verified mathematically
@@ -48,7 +50,7 @@ Traditional cybersecurity training does not cover AI attack surfaces. AI and mac
 ## What This Program Actually Is
 
 This is not a certificate farm.  
-This is not “ten hours to AI security mastery.”  
+This is not "ten hours to AI security mastery."  
 This is not theory without implementation.
 
 **This is a systems-level apprenticeship.**
@@ -70,14 +72,14 @@ If you are looking for shortcuts, this program is not for you.
 
 Each level produces **one enterprise-grade project** and maps directly to real industry roles.
 
-- **C-AISSA** — Certified AI Systems Security Associate  
-- **C-AMLE** — Certified Adversarial ML Engineer  
-- **C-LASS** — Certified LLM and Agent Security Specialist  
-- **C-AICDE** — Certified AI Cyber Defense Engineer  
-- **C-AIRTO** — Certified AI Red Team Operator  
-- **C-AIRGP** — Certified AI Risk and Governance Professional  
-- **C-AISA** — Certified AI Security Architect  
-- **C-PAISE** — Certified Principal AI Security Engineer  
+- **C-AISSA** — Certified AI Systems Security Associate
+- **C-AMLE** — Certified Adversarial ML Engineer
+- **C-LASS** — Certified LLM and Agent Security Specialist
+- **C-AICDE** — Certified AI Cyber Defense Engineer
+- **C-AIRTO** — Certified AI Red Team Operator
+- **C-AIRGP** — Certified AI Risk and Governance Professional
+- **C-AISA** — Certified AI Security Architect
+- **C-PAISE** — Certified Principal AI Security Engineer
 
 You may stop at any level or complete the full ladder.
 
@@ -85,28 +87,29 @@ You may stop at any level or complete the full ladder.
 
 ## Detailed Curriculum (Project-Oriented)
 
-### Module 0 — AI Systems Security Foundations  
+### Module 0 — AI Systems Security Foundations
 
-**Certification:** C-AISSA  
+**Certification:** C-AISSA
 
 **Timeline:** Two to four weeks
 
 **Enterprise Project:** Secure AI System Threat Model
 
 Students deliver a full security baseline for a production AI system, including:
+
 - Threat model
 - Attack surface map
 - Risk register
 - Remediation roadmap
 
 **Outcome:**  
-> “I can explain how an AI system fails before it is attacked.”
+> "I can explain how an AI system fails before it is attacked."
 
 ---
 
-### Module 1 — Adversarial Machine Learning  
+### Module 1 — Adversarial Machine Learning
 
-**Certification:** C-AMLE  
+**Certification:** C-AMLE
 
 **Timeline:** Eight to ten weeks
 
@@ -115,19 +118,20 @@ Students deliver a full security baseline for a production AI system, including:
 Students implement multiple adversarial attacks, evaluate transferability, and build a robustness dashboard with executive risk summaries.
 
 **Outcome:**  
-> “I can measure and communicate model robustness under adversarial pressure.”
+> "I can measure and communicate model robustness under adversarial pressure."
 
 ---
 
-### Module 2 — LLM and Autonomous Agent Security  
+### Module 2 — LLM and Autonomous Agent Security
 
-**Certification:** C-LASS  
+**Certification:** C-LASS
 
 **Timeline:** Eight to ten weeks
 
 **Enterprise Project:** LLM and Agent Security Gateway
 
 Students build a security layer for LLMs and autonomous agents, including:
+
 - Prompt injection detection
 - Jailbreak prevention
 - Tool-use authorization
@@ -135,64 +139,69 @@ Students build a security layer for LLMs and autonomous agents, including:
 - Kill-switch enforcement
 
 **Performance targets:**
+
 - Sub one-hundred millisecond response latency
 - False positive rate below five percent
 
 **Outcome:**  
-> “I can secure LLMs and autonomous agents operating in production.”
+> "I can secure LLMs and autonomous agents operating in production."
 
 ---
 
-### Module 3 — AI-Powered Cyber Defense  
+### Module 3 — AI-Powered Cyber Defense
 
-**Certification:** C-AICDE  
+**Certification:** C-AICDE
 
 **Timeline:** Ten to twelve weeks
 
 **Enterprise Project:** AI Threat Detection System
 
 Students build a real-time, machine-learning-driven defense system such as:
+
 - Malware detection
 - Network intrusion detection
 - Behavioral anomaly detection
 
 **Performance targets:**
+
 - Detection accuracy above ninety-five percent
 - Sub-millisecond inference latency on high-throughput network traffic
 
 **Outcome:**  
-> “I can deploy AI systems that defend real environments at scale.”
+> "I can deploy AI systems that defend real environments at scale."
 
 ---
 
-### Module 4 — Offensive AI and Red Teaming  
+### Module 4 — Offensive AI and Red Teaming
 
-**Certification:** C-AIRTO  
+**Certification:** C-AIRTO
 
 **Timeline:** Ten to twelve weeks
 
 **Enterprise Project:** AI Red Team Automation Platform
 
 Students simulate real adversaries targeting AI systems through:
+
 - Model extraction
 - Data poisoning
 - Backdoor attacks
 - Prompt injection campaigns
 
 **Outcome:**  
-> “I can simulate realistic attackers against AI systems.”
+> "I can simulate realistic attackers against AI systems."
 
 ---
 
-### Module 5 — AI Governance, Risk, and Compliance  
+### Module 5 — AI Governance, Risk, and Compliance
 
-**Certification:** C-AIRGP  
+**Certification:** C-AIRGP
 
 **Timeline:** Six to eight weeks
 
 **Enterprise Project:** AI Governance and Risk Engine
 
 Students build a governance platform featuring:
+
 - Model lineage tracking
 - Risk scoring
 - Bias auditing
@@ -200,39 +209,42 @@ Students build a governance platform featuring:
 - Audit evidence generation
 
 **Outcome:**  
-> “I can translate AI security into regulatory and business language.”
+> "I can translate AI security into regulatory and business language."
 
 ---
 
-### Module 6 — AI Security Architecture  
+### Module 6 — AI Security Architecture
 
-**Certification:** C-AISA  
+**Certification:** C-AISA
 
 **Timeline:** Six to eight weeks
 
 **Enterprise Projects:**
+
 - AI Threat Economics Simulator
 - Formal Robustness Certification Tool
 
 Students quantify risk in monetary terms and produce mathematically justified robustness guarantees.
 
 **Outcome:**  
-> “I can design secure AI systems from first principles.”
+> "I can design secure AI systems from first principles."
 
 ---
 
-### Module 7 — Principal Capstone  
+### Module 7 — Principal Capstone
 
-**Certification:** C-PAISE  
+**Certification:** C-PAISE
 
 **Timeline:** Four to six months
 
 **Capstone Options:**
+
 - Zero-Trust AI Security Platform
 - Comprehensive AI Red Team Suite
 - Publishable Industry Benchmark
 
 **Mandatory requirements:**
+
 - Production-grade system
 - Live demonstration
 - Complete threat model
@@ -240,31 +252,34 @@ Students quantify risk in monetary terms and produce mathematically justified ro
 - Oral defense
 
 **Outcome:**  
-> “I operate at principal or founder level in AI security.”
+> "I operate at principal or founder level in AI security."
 
 ---
 
 ## Certification Validation Model
 
 Every certification requires:
-1. Enterprise project delivery  
-2. Live attack and defense demonstration  
-3. Written threat model  
-4. Failure analysis  
-5. Oral defense before StFrancis Labs reviewers  
+
+1. Enterprise project delivery
+2. Live attack and defense demonstration
+3. Written threat model
+4. Failure analysis
+5. Oral defense before StFrancis Labs reviewers
 
 No multiple-choice exams. No shortcuts.
 
 ---
 
-# 🧪 Hands-On Lab Exam Additions for All Certification Levels
+## 🧪 Hands-On Lab Exam Additions for All Certification Levels
 
 Here are the **practical, hands-on lab exam requirements** to add to each certification level in your AI Security Engineer Bootcamp:
 
 ---
 
-## **Module 0 — C-AISSA (AI Systems Security Associate)**
-### **Lab Exam: Real-World Threat Modeling Challenge**
+### **Module 0 — C-AISSA (AI Systems Security Associate)**
+
+**Lab Exam:** Real-World Threat Modeling Challenge
+
 - **Duration:** 4 hours
 - **Scenario:** Given a live e-commerce recommendation API
 - **Tasks:**
@@ -279,8 +294,10 @@ Here are the **practical, hands-on lab exam requirements** to add to each certif
 
 ---
 
-## **Module 1 — C-AMLE (Adversarial ML Engineer)**
-### **Lab Exam: Black-Box Attack Tournament**
+### **Module 1 — C-AMLE (Adversarial ML Engineer)**
+
+**Lab Exam:** Black-Box Attack Tournament
+
 - **Duration:** 48-hour capture-the-flag
 - **Scenario:** Attack 3 production-grade models without internal knowledge
 - **Tasks:**
@@ -293,8 +310,10 @@ Here are the **practical, hands-on lab exam requirements** to add to each certif
 
 ---
 
-## **Module 2 — C-LASS (LLM & Agent Security Specialist)**
-### **Lab Exam: Jailbreak & Containment Marathon**
+### **Module 2 — C-LASS (LLM & Agent Security Specialist)**
+
+**Lab Exam:** Jailbreak & Containment Marathon
+
 - **Duration:** 6 hours
 - **Scenario:** Secured LLM agent with financial tool access
 - **Tasks:**
@@ -309,8 +328,10 @@ Here are the **practical, hands-on lab exam requirements** to add to each certif
 
 ---
 
-## **Module 3 — C-AICDE (AI Cyber Defense Engineer)**
-### **Lab Exam: Live Attack Defense**
+### **Module 3 — C-AICDE (AI Cyber Defense Engineer)**
+
+**Lab Exam:** Live Attack Defense
+
 - **Duration:** 24-hour continuous defense
 - **Scenario:** Production network with AI-powered attacks
 - **Tasks:**
@@ -326,8 +347,10 @@ Here are the **practical, hands-on lab exam requirements** to add to each certif
 
 ---
 
-## **Module 4 — C-AIRTO (AI Red Team Operator)**
-### **Lab Exam: Red Team Operation**
+### **Module 4 — C-AIRTO (AI Red Team Operator)**
+
+**Lab Exam:** Red Team Operation
+
 - **Duration:** 72-hour simulated enterprise environment
 - **Scenario:** Financial institution with 5 AI systems
 - **Tasks:**
@@ -343,8 +366,10 @@ Here are the **practical, hands-on lab exam requirements** to add to each certif
 
 ---
 
-## **Module 5 — C-AIRGP (AI Risk & Governance Professional)**
-### **Lab Exam: Compliance & Audit Simulation**
+### **Module 5 — C-AIRGP (AI Risk & Governance Professional)**
+
+**Lab Exam:** Compliance & Audit Simulation
+
 - **Duration:** 8 hours
 - **Scenario:** Healthcare AI system facing regulatory audit
 - **Tasks:**
@@ -360,8 +385,10 @@ Here are the **practical, hands-on lab exam requirements** to add to each certif
 
 ---
 
-## **Module 6 — C-AISA (AI Security Architect)**
-### **Lab Exam: Secure System Design & Build**
+### **Module 6 — C-AISA (AI Security Architect)**
+
+**Lab Exam:** Secure System Design & Build
+
 - **Duration:** 1 week
 - **Scenario:** Design autonomous vehicle security system
 - **Tasks:**
@@ -374,8 +401,10 @@ Here are the **practical, hands-on lab exam requirements** to add to each certif
 
 ---
 
-## **Module 7 — C-PAISE (Principal AI Security Engineer)**
-### **Lab Exam: Full-System Capstone**
+### **Module 7 — C-PAISE (Principal AI Security Engineer)**
+
+**Lab Exam:** Full-System Capstone
+
 - **Duration:** 2 weeks
 - **Scenario:** Build and defend complete AI security platform
 - **Requirements:**
@@ -391,20 +420,23 @@ Here are the **practical, hands-on lab exam requirements** to add to each certif
 
 ## 🎯 Lab Exam Common Requirements
 
-### **For All Levels:**
+**For All Levels:**
+
 1. **Live Environment:** No simulations – real systems, real attacks
 2. **Time Pressure:** Realistic deadlines mirroring production incidents
 3. **Documentation:** Professional reports suitable for executives
 4. **Code Quality:** Production-ready, reviewed, and tested
 5. **Ethical Boundaries:** Clear rules of engagement, legal review
 
-### **Grading Rubric:**
+**Grading Rubric:**
+
 - **Technical Execution (40%)** – Did it work under pressure?
 - **Security Depth (30%)** – Understanding of root causes
 - **Communication (20%)** – Can explain to non-technical stakeholders
 - **Ethics (10%)** – Responsible disclosure and handling
 
-### **Failure Modes:**
+**Failure Modes:**
+
 - **Critical:** Causing actual harm or data loss
 - **Major:** Missing major vulnerability class
 - **Minor:** Poor documentation or communication
@@ -426,73 +458,56 @@ network:
   attack_simulation: enabled
   monitoring: full_packet_capture
 backup: hourly_snapshots
-```
+📊 Certification Validity & Renewal
+Certification valid: 2 years
 
----
+Renewal requires: Passing current year's lab exam
 
-## 📊 Certification Validity & Renewal
+Failure: Must retake full module
 
-- **Certification valid:** 2 years
-- **Renewal requires:** Passing current year's lab exam
-- **Failure:** Must retake full module
-- **Advanced standing:** Can challenge higher level labs directly
+Advanced standing: Can challenge higher level labs directly
 
----
+🔒 Security & Anti-Cheating Measures
+Live proctoring with screen/camera monitoring
 
-## 🔒 Security & Anti-Cheating Measures
+Unique exam environments per candidate
 
-1. **Live proctoring** with screen/camera monitoring
-2. **Unique exam environments** per candidate
-3. **Behavioral analysis** for cheating detection
-4. **Post-exam code review** for originality
-5. **Oral defense** to verify understanding
+Behavioral analysis for cheating detection
 
----
+Post-exam code review for originality
 
-**These hands-on lab exams ensure that every certified engineer has actually built, broken, and defended real AI systems — not just passed a written test.**
+Oral defense to verify understanding
 
----
+These hands-on lab exams ensure that every certified engineer has actually built, broken, and defended real AI systems — not just passed a written test.
 
-## The StFrancis Labs Thesis
-
-**Intelligence without control is a liability.**
+The StFrancis Labs Thesis
+Intelligence without control is a liability.
 
 AI systems learn, adapt, and act. Security cannot be bolted on later. It must be designed from first principles.
 
 This program trains engineers who can:
-- Think adversarially
-- Design defensible systems
-- Quantify risk
-- Communicate with executives
-- Operate responsibly at scale
 
----
+Think adversarially
 
-## Final Note
+Design defensible systems
 
+Quantify risk
+
+Communicate with executives
+
+Operate responsibly at scale
+
+Final Note
 This program is difficult by design.
 
 It exists for engineers willing to accept responsibility for securing systems that shape real outcomes in the world.
 
-**Security is the cost of intelligence.**
+Security is the cost of intelligence.
 
----
+StFrancis Labs
+Building the engineers who secure the future
 
-**StFrancis Labs**  
-*Building the engineers who secure the future*
-
----
-
-<SocialShare
-  title="AI Security Engineer Bootcamp & Certification Ladder"
-  slug="ai-security-engineer-bootcamp-and-certification-stfrancis-labs"
-/>
+<SocialShare title="AI Security Engineer Bootcamp & Certification Ladder" slug="ai-security-engineer-bootcamp-and-certification-stfrancis-labs" />
 
 <GiscusComments />
-
-<Newsletter
-  title="StFrancis Labs Updates"
-  description="Weekly deep dives on adversarial machine learning, LLM security, and AI governance."
-  buttonText="Subscribe"
-  theme="secondary"
-/>
+<Newsletter title="StFrancis Labs Updates" description="Weekly deep dives on adversarial machine learning, LLM security, and AI governance." buttonText="Subscribe" theme="secondary" />
